--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI="mongodb+srv://jatingupta9213037402:Jatin2306@e-commerce.0ny6asq.mongodb.net/e-commerce"
-PORT="4000"
+PORT=8000
+MONGO_URL="mongodb+srv://Jatin2306:Jatin123@e-commerce.0ny6asq.mongodb.net/e-commerce"
+JWT_SECRET="ecommercewebsite"
